tester/testsuite/bad/no_void_array4.jl
int main() {
    return 0;
}

void foo(void[] a) {
    a = new void[10];
}